--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="https://mobirise.com"><br></a>
                 </li>
-                <li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-4" href="page8.html" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>About&nbsp;</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="false"></a><a class="text-warning dropdown-item display-4" href="page1.html" aria-expanded="false">Change or be changed<br></a><a class="text-warning dropdown-item display-4" href="page2.html" aria-expanded="false">Shared Values<br></a><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="true">New Item</a></div></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page5.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item">
+                <li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-4" href="page8.html" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>About&nbsp;</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="false"></a><a class="text-warning dropdown-item display-4" href="page1.html" aria-expanded="false">Change or be changed<br></a><a class="text-warning dropdown-item display-4" href="page7.html" aria-expanded="false">A unique collaboration</a><a class="text-warning dropdown-item display-4" href="page2.html" aria-expanded="false">Shared Values<br></a><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="false">New Item</a></div></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page5.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="page3.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Corporations</a>
                 </li></ul>
             
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
 
     
 
