--- a/page4.html
+++ b/page4.html
@@ -53,7 +53,7 @@
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="https://mobirise.com"><br></a>
                 </li>
-                <li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-4" href="page8.html" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>About&nbsp;</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="false"></a><a class="text-warning dropdown-item display-4" href="page1.html" aria-expanded="false">Change or be changed<br></a><a class="text-warning dropdown-item display-4" href="page2.html" aria-expanded="false">Shared Values<br></a><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="true">New Item</a></div></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page5.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item">
+                <li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-4" href="page8.html" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>About&nbsp;</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="false"></a><a class="text-warning dropdown-item display-4" href="page1.html" aria-expanded="false">Change or be changed<br></a><a class="text-warning dropdown-item display-4" href="page7.html" aria-expanded="false">A unique collaboration</a><a class="text-warning dropdown-item display-4" href="page2.html" aria-expanded="false">Shared Values<br></a><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="false">New Item</a></div></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page5.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="page3.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Corporations</a>
                 </li></ul>
             
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-s1B8EOEKin mbr-parallax-background" id="header2-1o">
+<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="cid-s1B8EOEKin mbr-parallax-background" id="header2-1o">
 
     
 
@@ -239,7 +239,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Juup8wUZzp1/afW6ECkZq65/w4hFCxTGXIsAsv6v2wqyImiP1FWeQWpGpNv5c7cKjocM6iU2a6GPEiC5VndbGqPWZMFV2WAmTQ8H0IifSE7/i3tsbiee6W2zOY3rYvUe">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Z2PcoA1aMIOwY2hMV75g9FkT78ITqbep/s88m9ASRBvAL86EWbdEEAJ4/xbmnXBMagPuxEED9ABosfxqz3TA8VnJUFAeuxjsIIs9+vwrD75CptBCXeXxl/tqBtGz9l55">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
