--- a/page8.html
+++ b/page8.html
@@ -52,7 +52,7 @@
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="https://mobirise.com"><br></a>
                 </li>
-                <li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-4" href="page8.html" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>About&nbsp;</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="false"></a><a class="text-warning dropdown-item display-4" href="page1.html" aria-expanded="false">Change or be changed<br></a><a class="text-warning dropdown-item display-4" href="page7.html" aria-expanded="false">A unique collaboration</a><a class="text-warning dropdown-item display-4" href="page2.html" aria-expanded="false">Shared Values<br></a><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="false">New Item</a></div></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page5.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item">
+                <li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-4" href="page8.html" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>About&nbsp;</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="false"></a><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="false">Change or be changed<br></a><a class="text-warning dropdown-item display-4" href="page7.html" aria-expanded="false">A unique collaboration</a><a class="text-warning dropdown-item display-4" href="page2.html" aria-expanded="false">Shared Values<br></a><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="false">New Item</a></div></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page5.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="page3.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Corporations</a>
                 </li></ul>
             
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="header1 cid-s3ijrfM12r mbr-parallax-background" id="header16-5m">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="header1 cid-s3ijrfM12r mbr-parallax-background" id="header16-5m">
 
     
 
