--- a/ResponsibilitySkill.html
+++ b/ResponsibilitySkill.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-warning display-4" href="index.html" aria-expanded="false">About</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="index.html" aria-expanded="false">Services</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="index.html" aria-expanded="false">Benchmarks</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="index.html" aria-expanded="false">People's Assembly</a></li><li class="nav-item">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-4" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">About</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="index.html" aria-expanded="false">Mission</a><a class="text-warning dropdown-item display-4" href="index.html" aria-expanded="false">Why Responsible 100?</a><a class="text-warning dropdown-item display-4" href="index.html" aria-expanded="false">Information</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-4" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">Services</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="index.html" aria-expanded="false">What We Do</a><a class="text-warning dropdown-item display-4" href="index.html" aria-expanded="false">Large Businesses</a><a class="text-warning dropdown-item display-4" href="index.html" aria-expanded="false">Small &amp; Medium Enterprises</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-4" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">Benchmarks</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="index.html" aria-expanded="false">About Benchmarking</a><a class="text-warning dropdown-item display-4" href="index.html" aria-expanded="false">Continuous Improvement</a><a class="text-warning dropdown-item display-4" href="index.html" aria-expanded="false">Case Studies</a></div></li><li class="nav-item dropdown open"><a class="nav-link link text-warning dropdown-toggle display-4" href="index.html" aria-expanded="true" data-toggle="dropdown-submenu">People's Assembly</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="index.html" aria-expanded="false">Building Consensus</a><a class="text-warning dropdown-item display-4" href="index.html" aria-expanded="false">Supporters</a></div></li><li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="https://mobirise.com"><br></a>
                 </li></ul>
             
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="header1 cid-s5nip910Wd" id="header16-53">
+<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="header1 cid-s5nip910Wd" id="header16-53">
 
     
 
